[package]
name = "governance-test-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.9"
solana-client = "1.9"
#spl-token = { version = "3.3", features = [ "no-entrypoint" ] }
spl-governance = { version = "2.2", path = "../../SolanaProgs/solana-program-library/governance/program" }
spl-governance-addin-mock = { version = "0.1", path = "../../SolanaProgs/solana-program-library/governance/addin-mock/program" }
#spl-governance-tools= { version = "0.1.2"}
#spl-governance-addin-api= { version = "0.1.1"}
#spl-governance-test-sdk = { version = "0.1.2"}
#spl-governance-addin-mock = { version = "0.1.1"}
#neonevm-sdk = { path = "../neonevm-sdk" }
